# claudit

./: CHANGELOG.md  README.md  package-lock.json  package.json
scripts/: release.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ccusage.rs  commands.rs  history.rs  keychain.rs  lib.rs  main.rs  notifier.rs  usage_api.rs
web/: index.html
web/src/: main.js  styles.css
