[package]
name = "claudit"
version = "0.6.15"
edition = "2021"

[lib]
name = "claudit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["process", "time", "macros", "rt"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
dirs = "6"
tauri-plugin-autostart = "2"
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
tauri-plugin-process = "2"
